# nepali-tokenizers

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  run-test.yml
nepalitokenizers/models/: SentencePiece.json
src/nepalitokenizers/: __init__.py  tokenizers.py
src/nepalitokenizers/models/: WordPiece.json
tests/: test_tokenizers.py
train/: README.md  sentence_piece.py  word_piece.py
