[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepalitokenizers"
version = "0.0.1"
authors = [
  { name="Soyuj Jung Basnet", email="bsoyuj@gmail.com" },
]
description = "Pre-trained Tokenizers for the Nepali language with an interface to HuggingFace's tokenizers library for customizability."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["nepali", "tokenizer", "NLP", "wordpiece", "sentencepiece", "huggingface", "transformers"]
dependencies = [
    "tokenizers >= 0.13.3",
]

[project.urls]
"Homepage" = "https://github.com/basnetsoyuj/nepali-tokenizers"
"Bug Tracker" = "https://github.com/basnetsoyuj/nepali-tokenizers/issues"